Revision history for Perl extension List-SomeUtils

{{$NEXT}}

0.56     2017-07-22
    - Make sure we depend on the latest LSU::XS if the system support XS.

0.55     2017-07-22
    - Fixed incorrect comments in doc examples for uniq().
    - Added a new function, mode(), requested by Jerrad Pierce. GH #2.

0.54     2017-06-01
    - Moved issue tracking to GitHub.

0.53     2016-08-14
    - Replaced Exporter::Tiny with Exporter.

0.52     2016-05-06
    - Updated to latest ExtUtils::HasCompiler and simplified dynamic
      prereqs. Patch by Karen Etheridge. GitHub #3.

0.51     2016-02-27
    - No code changes. The last release was missing a Changes entry.

0.50    2016-02-27
    - This is List::MoreUtils under a different name with fewer configure-time
      prereqs.
    - The "import as old versions" feature present in LMU does not exist in
      this distribution.

0.413	2015-06-10
    - Fix compiling in c++ mode (depreciated, but some people seem to
      require it). Solves RT#104690

0.412	2015-05-19
    - release 0.411_001 without further changes

0.411_001	2015-05-11
    - move generation of test endpoints to author stage as requested per issue/#9
    - add a rough guide for contributors
    - fix rt#103251 to avoid removing bundled stuff by accident
    - Fix compilation errors under cl (Thanks to jddurand)

0.410	2015-03-30
    - release 0.409_003 after no further issues came up

0.409_003	2015-03-27
    - update bundled bootstrap modules
      * Data::Tumbler to 0.010
      * Test::WriteVariants to 0.012
      * Config::AutoConf to 0.311
    - fix spelling (and add stop-words for names etc. in author tests)

0.409_002	2015-03-23
    - fix multiple mg_get can break weird tie's (thanks to leont)
    - fix test run using PERL5OPT=d:Confess (thanks kentl & ribasushi)
    - use base instead of parent, cause parent isn't bundled before 5.10.1
      (smoke report from SREZIC)
    - update bundled modules (for bootstrapping) and ppport.h (from 3.25